Rename slug to customAlias, reduce default alias length, auto generate alias if not provided
