# models/urls.ts
@@ -3,7 +3,7 @@ import type { ObjectId } from 'mongodb';
 export type Url = {
   _id: ObjectId;
   originalUrl: string;
-  slug: string;
+  customAlias: string;
   description?: string;
   createdAt?: Date;
   updatedAt?: Date;
