# routes/redirectHandler.ts
@@ -16,10 +16,10 @@ const urlController = new URLController();
 router.use(cacheMiddleWare);
 router.use(loggerMiddleware);
 
-router.get('/:slug', async (req, res) => {
+router.get('/:customAlias', async (req, res) => {
   try {
-    const { slug } = req.params;
-    const result = await urlController.getRedirectUrl(slug);
+    const { customAlias } = req.params;
+    const result = await urlController.getRedirectUrl(customAlias);
 
     res.status(302).redirect(ensureProtocol(result));
   } catch (err) {
